@@ -100,8 +100,6 @@ _WTFReportBacktrace
 _WTFReportError
 _WTFReportFatalError
 __ZN14OpaqueJSString6createERKN3JSC7UStringE
-__ZN3JSC7Options17numberOfGCMarkersE
-__ZN3JSC7Options24opaqueRootMergeThresholdE
 __ZN3JSC10HandleHeap12writeBarrierEPNS_7JSValueERKS1_
 __ZN3JSC10HandleHeap4growEv
 __ZN3JSC10Identifier11addSlowCaseEPNS_12JSGlobalDataEPN3WTF10StringImplE
@@ -189,6 +187,7 @@ __ZN3JSC14TimeoutChecker10didTimeOutEPNS_9ExecStateE
 __ZN3JSC14TimeoutChecker5resetEv
 __ZN3JSC14VTableSpectrum5countEPNS_6JSCellE
 __ZN3JSC14throwTypeErrorEPNS_9ExecStateE
+__ZN3JSC14throwTypeErrorEPNS_9ExecStateERKNS_7UStringE
 __ZN3JSC15AllocationSpace16allocateSlowCaseERNS_11MarkedSpace9SizeClassE
 __ZN3JSC15WeakHandleOwner26isReachableFromOpaqueRootsENS_6HandleINS_7UnknownEEEPvRNS_11SlotVisitorE
 __ZN3JSC15WeakHandleOwner8finalizeENS_6HandleINS_7UnknownEEEPv
@@ -243,6 +242,7 @@ __ZN3JSC25evaluateInGlobalCallFrameERKNS_7UStringERNS_7JSValueEPNS_14JSGlobalObj
 __ZN3JSC29callHostFunctionAsConstructorEPNS_9ExecStateE
 __ZN3JSC30isTerminatedExecutionExceptionENS_7JSValueE
 __ZN3JSC35createInterruptedExecutionExceptionEPNS_12JSGlobalDataE
+__ZN3JSC36StrictModeReadonlyPropertyWriteErrorE
 __ZN3JSC41constructFunctionSkippingEvalEnabledCheckEPNS_9ExecStateEPNS_14JSGlobalObjectERKNS_7ArgListERKNS_10IdentifierERKNS_7UStringERKN3WTF12TextPositionE
 __ZN3JSC4Heap11objectCountEv
 __ZN3JSC4Heap12addFinalizerEPNS_6JSCellEPFvS2_E
@@ -291,6 +291,8 @@ __ZN3JSC7JSArrayC1ERNS_12JSGlobalDataEPNS_9StructureE
 __ZN3JSC7JSArrayC2ERNS_12JSGlobalDataEPNS_9StructureE
 __ZN3JSC7JSArrayD2Ev
 __ZN3JSC7JSValue13isValidCalleeEv
+__ZN3JSC7Options17numberOfGCMarkersE
+__ZN3JSC7Options24opaqueRootMergeThresholdE
 __ZN3JSC7Profile10restoreAllEv
 __ZN3JSC7Profile5focusEPKNS_11ProfileNodeE
 __ZN3JSC7Profile7excludeEPKNS_11ProfileNodeE
@@ -310,8 +312,8 @@ __ZN3JSC8Debugger6detachEPNS_14JSGlobalObjectE
 __ZN3JSC8DebuggerD2Ev
 __ZN3JSC8JSObject10putByIndexEPNS_6JSCellEPNS_9ExecStateEjNS_7JSValueE
 __ZN3JSC8JSObject11hasInstanceEPS0_PNS_9ExecStateENS_7JSValueES4_
-__ZN3JSC8JSObject12defineGetterEPS0_PNS_9ExecStateERKNS_10IdentifierES1_j
 __ZN3JSC8JSObject12defaultValueEPKS0_PNS_9ExecStateENS_22PreferredPrimitiveTypeE
+__ZN3JSC8JSObject12defineGetterEPS0_PNS_9ExecStateERKNS_10IdentifierES1_j
 __ZN3JSC8JSObject12defineSetterEPS0_PNS_9ExecStateERKNS_10IdentifierES1_j
 __ZN3JSC8JSObject12lookupGetterEPNS_9ExecStateERKNS_10IdentifierE
 __ZN3JSC8JSObject12lookupSetterEPNS_9ExecStateERKNS_10IdentifierE
@@ -391,6 +393,8 @@ __ZN3WTF11OSAllocator16reserveAndCommitEmNS0_5UsageEbbb
 __ZN3WTF11OSAllocator18releaseDecommittedEPvm
 __ZN3WTF11commentAtomE
 __ZN3WTF11currentTimeEv
+__ZN3WTF11dtoaRoundDPEPcdiRbRiRj
+__ZN3WTF11dtoaRoundSFEPcdiRbRiRj
 __ZN3WTF11emptyStringEv
 __ZN3WTF11fastReallocEPvm
 __ZN3WTF12AtomicString11addSlowCaseEPNS_10StringImplE
@@ -438,13 +442,13 @@ __ZN3WTF15ThreadConditionD1Ev
 __ZN3WTF15charactersToIntEPKtmPb
 __ZN3WTF16callOnMainThreadEPFvPvES0_
 __ZN3WTF16callOnMainThreadERKNS_8FunctionIFvvEEE
-__ZN3WTF16codePointCompareERKNS_6StringES2_
 __ZN3WTF16codePointCompareEPKNS_10StringImplES2_
+__ZN3WTF16codePointCompareERKNS_6StringES2_
 __ZN3WTF16fastZeroedMallocEm
 __ZN3WTF17charactersToFloatEPKtmPbS2_
 __ZN3WTF17equalIgnoringCaseEPKtPKhj
-__ZN3WTF17equalIgnoringCaseEPNS_10StringImplES1_
 __ZN3WTF17equalIgnoringCaseEPNS_10StringImplEPKh
+__ZN3WTF17equalIgnoringCaseEPNS_10StringImplES1_
 __ZN3WTF18calculateDSTOffsetEdd
 __ZN3WTF18calculateUTCOffsetEv
 __ZN3WTF18charactersToDoubleEPKtmPbS2_
@@ -485,8 +489,6 @@ __ZN3WTF4SHA111computeHashERNS_6VectorIhLm20EEE
 __ZN3WTF4SHA18addBytesEPKhm
 __ZN3WTF4SHA1C1Ev
 __ZN3WTF4dtoaEPcdRbRiRj
-__ZN3WTF11dtoaRoundDPEPcdiRbRiRj
-__ZN3WTF11dtoaRoundSFEPcdiRbRiRj
 __ZN3WTF5Mutex4lockEv
 __ZN3WTF5Mutex6unlockEv
 __ZN3WTF5Mutex7tryLockEv
@@ -499,10 +501,9 @@ __ZN3WTF5equalEPKNS_10StringImplES2_
 __ZN3WTF5yieldEv
 __ZN3WTF6String26fromUTF8WithLatin1FallbackEPKhm
 __ZN3WTF6String29charactersWithNullTerminationEv
-__ZN3WTF6StringC1EPKcj
-__ZN3WTF6String6appendEh
 __ZN3WTF6String6appendEPKtj
 __ZN3WTF6String6appendERKS0_
+__ZN3WTF6String6appendEh
 __ZN3WTF6String6appendEt
 __ZN3WTF6String6formatEPKcz
 __ZN3WTF6String6insertERKS0_j
@@ -519,6 +520,7 @@ __ZN3WTF6String8fromUTF8EPKh
 __ZN3WTF6String8fromUTF8EPKhm
 __ZN3WTF6String8truncateEj
 __ZN3WTF6StringC1EPKc
+__ZN3WTF6StringC1EPKcj
 __ZN3WTF6StringC1EPKt
 __ZN3WTF6StringC1EPKtj
 __ZN3WTF6strtodEPKcPPc
